--- a/spring-cloud-service-admin/src/main/resources/application.yml
+++ b/spring-cloud-service-admin/src/main/resources/application.yml
@@ -1,16 +1,7 @@
 spring:
-  application:
-    name: spring-cloud-service-admin
-  zipkin:
-    base-url: http://localhost:9070
-  boot:
-    admin:
-      client:
-        url: http://localhost:9090
-server:
-  port: 9010
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:9000/eureka/
+  cloud:
+    config:
+      uri: localhost:8888
+      name: service-admin
+      label: master
+      profile: dev
